--- a/model/scriptTest/data_project_invalid.json
+++ b/model/scriptTest/data_project_invalid.json
@@ -1,150 +1,141 @@
-[
-    {
-        "name": 1,
-        "description": "test 1",
-        "startDate": "2022-01-01",
-        "deadline": "2022-03-31",
-        "status": "in progress",
-        "employee": [
-            {
-                "name": "John Doe",
-                "task_id": 1,
-                "role": "developer"
-            },
-            {
-                "name": "Jane Doe",
-                "task_id": 2,
-                "role": "designer"
-            }
-        ]
-    },
-    {
-        "name": "test 2",
-        "description": "test 2",
-        "startDate": "2022-01-01",
-        "deadline": "2022-12-31",
-        "employee": [
-            {
-                "name": "John Doe",
-                "task_id": ObjectId("61f48234e0a181c83c35d9a2"),
-                "role": "developer"
-            },
-            {
-                "name": "Jane Smith",
-                "task_id": ObjectId("61f48234e0a181c83c35d9a3"),
-                "role": "designer"
-            }
-        ]
-    },
-    {
-        "name": "test 3",
-        "description": "test 3",
-        "startDate": "2022-01-01",
-        "deadline": "2022-12-31",
-        "status": "finished",
-        "employee": [
-            {
-                "name": "John Doe",
-                "task_id": ObjectId("61f48234e0a181c83c35d9a2"),
-                "role": "developer"
-            },
-            {
-                "name": "Jane Smith",
-                "task_id": ObjectId("61f48234e0a181c83c35d9a3"),
-                "role": "designer"
-            }
-        ]
-    },
-    {
-        "name": "test 4",
-        "description": "test 4",
-        "startDate": "2022-01-01",
-        "deadline": "2022-12-31",
-        "status": "in progress",
-        "employee": [
-            {
-                "name": "John Doe",
-                "task_id": ObjectId("61f48234e0a181c83c35d9a2"),
-                "role": "programmer"
-            },
-            {
-                "name": "Jane Smith",
-                "task_id": ObjectId("61f48234e0a181c83c35d9a3"),
-                "role": "designer"
-            }
-        ]
-    },
-    {
-        "name": "test 5",
-        "description": "test 5",
-        "startDate": "2022-04-01",
-        "status": "in progress",
-        "employee": [
-            {
-                "name": "Alice",
-                "task_id": ObjectId("61f926cfdd299936c372b91e"),
-                "role": "developer"
-            }
-        ]
-    },
-
-    {
-        "name": "test 6",
-        "description": "test 6",
-        "startDate": "2022-04-01",
-        "deadline": "2022-06-30",
-        "status": "en cours",
-        "employee": [
-            {
-                "name": "Alice",
-                "task_id": ObjectId("61f926cfdd299936c372b91e"),
-                "role": "developer"
-            }
-        ]
-    },
-    {
-        "name": "test 7",
-        "description": "test 7",
-        "startDate": "2022-04-01",
-        "deadline": "2022-06-30",
-        "status": "in progress",
-        "employee": [
-            {
-                "task_id": ObjectId("61f926cfdd299936c372b91e"),
-                "role": "developer"
-            }
-        ]
-    },
-    {
-        "description": "test 8",
-        "startDate": "2022-04-01",
-        "deadline": "2022-06-30",
-        "status": "in progress",
-        "employee": [
-            {
-                "name": "Alice",
-                "task_id": ObjectId("61f926cfdd299936c372b91e"),
-                "role": "developer"
-            }
-        ]
-    },
-    {
-        "name": 9,
-        "description": "test 9",
-        "startDate": "2022-01-01",
-        "deadline": "2022-03-31",
-        "status": "in progress",
-        "employee": [
-            {
-                "name": "John Doe",
-                "task_id": ObjectId("61f926cfdd299336c372b91e"),
-                "role": "developer"
-            },
-            {
-                "name": "Jane Doe",
-                "task_id": ObjectId("61f926cfdd299936j372b91e"),
-                "role": "designer"
-            }
-        ]
-    }      
+db.projects.insertMany(
+[  
+  {
+    "_id": 1,
+    "name": "test 1",
+    "description": "test 1",    
+    "startDate": ISODate("2022-02-01"),    
+    "deadline": ISODate("2022-04-30"),    
+    "status": "in progresdqsvs",    
+    "employee": [      
+      {
+        "name": "John Doe",        
+        "role": "developer"      
+        }    
+      ]
+  },
+  {
+    "_id": 2,
+    "name": "test 2",
+    "description": "test 2",
+    "startDate": ISODate("2021-05-01"),
+    "deadline": ISODate("2021-08-31"),
+    "status": "closed",
+    "employee": [
+      {
+        "role": "designer"
+      },
+      {
+        "name": "Bob Johnson",
+        "role": "developer"
+      },
+      {
+        "name": "Alice Wong",
+        "role": "maintainer"
+      }
+    ]
+  },
+  {
+    "_id": 3,
+    "name": "test 3",
+    "description": "test 3",
+    "startDate": "date",
+    "deadline": ISODate("2022-06-30"),
+    "status": "in progress",
+    "employee": []
+  },
+  {
+    "_id": 4,
+    "name": 4,
+    "description": "test 4",
+    "startDate": ISODate("2023-01-01"),
+    "deadline": ISODate("2023-01-01"),
+    "status": "in progress",
+    "employee": [
+      {
+        "name": "John Doe",
+        "role": "developer"
+      },
+      {
+        "name": "Jane Smith",
+        "role": "designer"
+      }
+    ]
+  },
+  {
+    "_id": "5",
+    "name": "test 5",
+    "description": "test 5",
+    "startDate": ISODate("2021-11-01"),
+    "deadline": ISODate("2022-02-28"),
+    "status": "closed",
+    "employee": [
+      {
+        "name": "Bob Johnson",
+        "role": "designer"
+      }
+    ]
+  },
+  {
+    "name": "test 6",
+    "description": "test 6",
+    "startDate": ISODate("2022-04-01"),
+    "deadline": ISODate("2022-09-30"),
+    "status": "in progress",
+    "employee": [
+      {
+        "name": "Alice Wong",
+        "role": "maintainer"
+      }
+    ]
+  },
+  {
+    "_id": 7,
+    "name": "test 7",
+    "description": "test 7",
+    "startDate": ISODate("2021-10-01"),
+    "deadline": ISODate("2022-01-31"),
+    "status": "closed",
+    "employee": [
+      {
+        "name": "John Doe",
+        "role": "developer"
+      }
+    ]
+  },
+  {
+    "_id": 8,
+    "name": "test 8",
+    "description": "test 8",
+    "startDate": ISODate("2022-05-01"),
+    "deadline": ISODate("2022-10-31"),
+    "status": "in progress",
+    "employee": [
+      {
+        "name": "Jane Smith",
+        "role": "designer"
+      },
+      {
+        "name": "Bob Johnson",
+      }
+    ]
+  },
+  {
+    "_id": 9,
+    "description": "test 9",
+    "startDate": ISODate("2022-05-01"),
+    "deadline": ISODate("2022-10-31"),
+    "status": "in progress",
+    "employee": [
+      {
+        "name": "Jane Smith",
+        "role": "designer"
+      },
+      {
+        "name": "Bob Johnson",
+        "role": "designer"
+      }
+    ]
+  }
 ]
+)
