--- a/express/package.json
+++ b/express/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "morgan": "^1.10.0",
